@@ -194,6 +194,7 @@
   Sven Verdoolaege		skimo@liacs.nl
   Terry D. Dontje		Terry.Dontje@Sun.COM
   Tim Mooney			mooney@dogbert.cc.ndsu.NoDak.edu
+  Todd C. Miller		Todd.Miller@courtesan.com
   Todd Vierling			tv@pobox.com
   Tom Tromey			tromey@cygnus.com
   Tor Lillqvist			tml@iki.fi
